k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-webapp
  labels:
    app: portfolio-webapp
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 4000
    protocol: TCP
    name: http
  selector:
    app: portfolio-webapp
